Wrote custom parser instead of verbose JSON Parsers (even JsonIter blew the size up to ~7x)